[KEYCLOAK-17254] Adaptively add the default modular JVM options to the "javaVmArguments" to start the cache server container with, if the JVM used to run the cache server is modular (JDK 9+)
Signed-off-by: Jan Lieskovsky <jlieskov@redhat.com>